# liveonebillionlinechallenge

./: .gitignore  README.md  etl_duckdb.py  etl_duckdb_saving_in_parquet.py  etl_pandas.py  pyproject.toml
dashboard/: meu_dashboard_correto.py
data/: measurements_summary.parquet
src/: compare.py  etl_python.py
