[tool.poetry]
name = "liveonebillionlinechallenge"
version = "0.1.0"
description = ""
authors = ["arleydeziderio <arleydeziderio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
